[gd_scene load_steps=6 format=2]

[ext_resource path="res://options_menu.gd" type="Script" id=1]
[ext_resource path="res://main_menu_font.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxLine" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
grow = 1.0
thickness = 4
vertical = false

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="options_menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="title" type="Label" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -128.0
margin_top = 96.0
margin_right = 128.0
margin_bottom = 131.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "Configuration"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="options" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -152.0
margin_right = 240.0
margin_bottom = -109.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="options_title" type="Label" parent="options" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 119.0
margin_right = 360.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "Accessibility"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_fonts" ]

[node name="options_sep" type="HSeparator" parent="options" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 39.0
margin_right = 480.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/separator = SubResource( 1 )
_sections_unfolded = [ "Size Flags", "custom_styles" ]

[node name="fade_cont" type="HBoxContainer" parent="options" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 47.0
margin_right = 480.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="fade_checkbtn" type="CheckButton" parent="options/fade_cont" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 307.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
custom_colors/font_color_pressed = Color( 0.0588235, 0.219608, 0.0588235, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "fade in/out"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="back_btn" type="Button" parent="." index="2"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -268.0
margin_right = 138.0
margin_bottom = -227.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back To menu"
flat = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]


